


New Catacombs Visual:

-while in the catacombs your vision will be darkened, only allowing you to see a certain distance away from you
-this is to make exploring the catacombs more creepy, but also more engaging since you'll actually need to explore properly instead of just seeing what rooms are around you



New Enemy, the Catacomb Guardian:

-Basically a dungeon guardian but for the catacombs, to prevent exploring it or getting loot before its intended to be found
-They will spawn in each layer of the catacombs if that layer's barrier has not been opened (does not apply to big bone's arena)
-you will be able to spawn them manually after big bone if you want to actually fight one (if you are insane)
-Defeating the catacomb guardian will give you a funny pet item



New Music:

-"The Evolution of Evil" By Rockwizard5, plays during the Egg Incursion event
-"Harvest Rainfall" By Bananalizard, plays when it rains in the Spooky Forest biome
-"A Boneyard Too Far" By Bananalizard, plays in the new Swampy Cemetery biome



New Config Options:

Spooky Forest at Spawn:
-Allows you to determine whether the spooky forest generates at your spawn point, or off to the side away from spawn
-Turn this option off to make the spooky forest generate away from spawn (Be warned, this might destroy parts of vanilla's or other mod's biomes on small worlds)
-This option may also be helpful if you are playing with other mods that have worldgen at or nearby spawn

Screen Shaking Effect:
-Allows you to toggle the mod's screen shaking effects, in case you do not want it on for any reason
(For example: when rot-gourd shakes the screen after slamming the ground, or during big bone's death animation)



~CHANGES TO EXISTING STUFF~


Old Eye Valley Chest Items:

Exposed Nerve: 
-There is now a rare purple colored nerve tile that grows in the valley of eyes during hardmode, break it to get the exposed nerve

Monster Blood Vial:
-Rarely drops from any pre-hardmode eye valley enemy

Gore Staff: