@@ -13,10 +13,12 @@ using System.Collections.Generic;
 
 using Spooky.Core;
 using Spooky.Content.Items.BossBags;
+using Spooky.Content.Items.Costume;
 using Spooky.Content.Items.Pets;
 using Spooky.Content.Items.SpookyHell.Boss;
 using Spooky.Content.NPCs.Boss.Orroboro.Projectiles;
 using Spooky.Content.Tiles.Relic;
+using Spooky.Content.Tiles.Trophy;
 
 namespace Spooky.Content.NPCs.Boss.Orroboro
 {
@@ -26,8 +28,9 @@ namespace Spooky.Content.NPCs.Boss.Orroboro
         public bool Enraged = false;
         private bool spawned;
 
-        public static readonly SoundStyle CrunchSound = new("Spooky/Content/Sounds/SpookyHell/OrroboroCrunch", SoundType.Sound);
-        public static readonly SoundStyle GrowlSound = new("Spooky/Content/Sounds/SpookyHell/OrroboroGrowl1", SoundType.Sound);
+        public static readonly SoundStyle HissSound1 = new("Spooky/Content/Sounds/Orroboro/HissShort", SoundType.Sound) { PitchVariance = 0.6f };
+        public static readonly SoundStyle HissSound2 = new("Spooky/Content/Sounds/Orroboro/HissLong", SoundType.Sound) { PitchVariance = 0.6f };
+        public static readonly SoundStyle SpitSound = new("Spooky/Content/Sounds/Orroboro/VenomSpit", SoundType.Sound) { PitchVariance = 0.6f };
         public static readonly SoundStyle HitSound = new("Spooky/Content/Sounds/SpookyHell/EnemyHit", SoundType.Sound);
         public static readonly SoundStyle DeathSound = new("Spooky/Content/Sounds/SpookyHell/OrroboroDeath", SoundType.Sound);
 
@@ -307,7 +310,7 @@ namespace Spooky.Content.NPCs.Boss.Orroboro
                             int chargeTime = Enraged ? 65 : 75;
                             if (NPC.localAI[0] == chargeTime)
                             {
-                                SoundEngine.PlaySound(GrowlSound, NPC.Center);
+                                SoundEngine.PlaySound(HissSound1, NPC.Center);
 
                                 Vector2 ChargeDirection = player.Center - NPC.Center;
                                 ChargeDirection.Normalize();
@@ -377,7 +380,7 @@ namespace Spooky.Content.NPCs.Boss.Orroboro
 
                         if (NPC.localAI[0] == 90)
                         {
-                            SoundEngine.PlaySound(GrowlSound, NPC.Center);
+                            SoundEngine.PlaySound(HissSound1, NPC.Center);
 
                             NPC.velocity.X = Enraged ? 48 : 42;
                             NPC.velocity.Y *= 0;
@@ -582,7 +585,7 @@ namespace Spooky.Content.NPCs.Boss.Orroboro
 
                         if (NPC.localAI[0] == 120)
                         {
-                            SoundEngine.PlaySound(GrowlSound, NPC.Center);
+                            SoundEngine.PlaySound(HissSound1, NPC.Center);
 
                             Vector2 ChargeDirection = player.Center - NPC.Center;
                             ChargeDirection.Normalize();
@@ -898,6 +901,10 @@ namespace Spooky.Content.NPCs.Boss.Orroboro
             npcLoot.Add(ItemDropRule.ByCondition(new ShouldOrroDropLoot(), Main.rand.Next(MainItem)));
 
             npcLoot.Add(ItemDropRule.ByCondition(new ShouldOrroDropLoot(), ModContent.ItemType<OrroboroChunk>(), 1, 12, 25));
+
+            //trophy and mask always drop directly from the boss
+            npcLoot.Add(ItemDropRule.Common(ModContent.ItemType<OrroMask>(), 7));
+			npcLoot.Add(ItemDropRule.Common(ModContent.ItemType<OrroTrophyItem>(), 10));
         }
 
         public override void OnKill()
@@ -930,7 +937,7 @@ namespace Spooky.Content.NPCs.Boss.Orroboro
         {
             if (!info.IsInSimulation)
             {
-                if (!NPC.AnyNPCs(ModContent.NPCType<BoroHead>()) && !Main.expertMode)
+                if (!NPC.AnyNPCs(ModContent.NPCType<BoroHead>()) && !Main.expertMode && !Main.masterMode)
                 {
                     return true;
                 }
