@@ -10,7 +10,8 @@ namespace Spooky
         [Label("Halloween Season")]
         [Tooltip("The spooky mod makes terraria's halloween seasonal event always active"
         + "\nTurn off to disable the halloween seasonal event being active"
-        + "\nTurning this config off will not disable halloween if it is meant to occur in vanilla")]
+        + "\nTurning this config off will not disable halloween if it is meant to occur in vanilla"
+        + "\n(For example, when you get one day of halloween after the pumpkin moon, or during october)")]
         [DefaultValue(true)]
         public bool HalloweenEnabled { get; set; }
 
